re PR rtl-optimization/53011 (ice in verify_loop_structure: bad sizes)

2012-04-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/53011
	* tree-eh.c (cleanup_empty_eh_merge_phis): Properly discard
	loops when redirecting an entry or latch edge.

	* g++.dg/torture/pr53011.C: New testcase.

From-SVN: r186529